@@ -1,0 +1,18 @@
+export const mock_news_list = [
+    {
+        cardDate: "January 30, 2022",
+        cardDescription: "A Dream We Still Dream: Further Explorations",
+    },
+    {
+        cardDate: "January 25, 2022",
+        cardDescription: "Now Taking Submissions For The Dead CoversProject 2022",
+    },
+    {
+        cardDate: "January 18, 2022",
+        cardDescription: "All In The Family: Matt J. Adams",
+    },
+    {
+        cardDate: "October 13, 2021",
+        cardDescription: "SAVE THE DATE: Dave's Picks Vol. 40 on sale THIS FRIDAY",
+    },
+]
